Revert "Fix "Missing = in header key=value""
This reverts commit 59502e33af0e5a4241092afdfd85d603f85474f9.

--- a/templates/letsencrypt_get_certificate_ocsp.sh.erb
+++ b/templates/letsencrypt_get_certificate_ocsp.sh.erb
@@ -31,7 +31,7 @@ openssl ocsp -noverify -issuer "${2}" \
 <% else -%>
 openssl ocsp -noverify -issuer "${2}" \
     -cert "${1}" \
-    -header "Host=${OCSPHOST}" \
+    -header Host "${OCSPHOST}" \
     -url "${OCSPURL}" -respout "${3}.new"
 <% end -%>
 
